# shared_resources

./: CHANGELOG.md  CREDITS.md  Cargo.toml  LICENSE-MIT  README.md
src/: errors.rs  lib.rs  resource.rs  store.rs
