[package]
name = "shared_resources"
description = "Provides a shared resources container which is thread-safe, and lock-free."
authors = ["AlexiWolf <alexi@wolvesin.space>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/AlexiWolf/shared_resources"
homepage = "https://github.com/AlexiWolf/shared_resources"
categories = ["data-structures", "concurrency", "rust-patterns"]
keywords = ["shared-data", "resources", "ecs"]
version = "0.1.0"
edition = "2021"

[dependencies]
atomic_refcell = "0.1.13"
downcast-rs = "1.2.0"
